White space fixes and other fixes

--- a/babaei.net/themes/TKL/source/css/custom.css
+++ b/babaei.net/themes/TKL/source/css/custom.css
@@ -153,7 +153,7 @@ footer .fa {
     font-size: 1.6em;
 }
 
-#intro .sharing 
+#intro .sharing
 {
     text-align: right;
     font-size: 1.8em;
@@ -183,6 +183,10 @@ footer .fa {
 #intro .sharing a:active * {
     text-decoration: none;
     color: #AAA;
+}
+
+figure.highlight {
+    margin-bottom: 1.0em;
 }
 
 .post-content {
